--- a/res/values/strings_activity_login.xml
+++ b/res/values/strings_activity_login.xml
@@ -4,13 +4,13 @@
 
     <!-- Strings related to login -->
     <string name="prompt_password">Password</string>
-    <string name="prompt_username">Gebruikersnaam</string>
+    <string name="prompt_username">Username</string>
     <string name="action_sign_in"><b>Sign in</b></string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="action_forgot_password">Recover lost password</string>
-    <string name="login_progress_signing_in">Inloggen&#8230;</string>
-    <string name="error_invalid_password">Het wachtwoord is te kort</string>
-    <string name="error_incorrect_password">Het wachtwoord is incorrect</string>
-    <string name="error_field_required">Dit is een verplicht veld</string>
+    <string name="login_progress_signing_in">Signing in&#8230;</string>
+    <string name="error_invalid_password">Password is too short</string>
+    <string name="error_incorrect_password">Incorrect password</string>
+    <string name="error_field_required">This field is required</string>
 
 </resources>
