--- a/res/layout/measurements_layout.xml
+++ b/res/layout/measurements_layout.xml
@@ -4,5 +4,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
+<ListView
+        android:id="@android:id/list"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
