--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -5,5 +5,19 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
-
+    
+    <item android:id="@+id/temperature"
+        android:title="Temperatures"
+        android:orderInCategory="1"
+        android:showAsAction="always" />
+    
+    <item android:id="@+id/usage"
+        android:title="Usage"
+        android:orderInCategory="2"
+        android:showAsAction="always" />
+    
+    <item android:id="@+id/settings"
+        android:title="Settings"
+        android:orderInCategory="3"
+        android:showAsAction="always" />
 </menu>
