--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -6,17 +6,17 @@
         android:showAsAction="never"
         android:title="@string/action_settings"/>
     
-    <item android:id="@+id/temperature"
+    <item android:id="@+id/measurement"
         android:title="Temperatures"
         android:orderInCategory="1"
         android:showAsAction="always" />
     
-    <item android:id="@+id/usage"
+    <item android:id="@+id/urinetest"
         android:title="Usage"
         android:orderInCategory="2"
         android:showAsAction="always" />
     
-    <item android:id="@+id/settings"
+    <item android:id="@+id/device"
         android:title="Settings"
         android:orderInCategory="3"
         android:showAsAction="always" />
