--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -6,18 +6,18 @@
         android:showAsAction="never"
         android:title="@string/action_settings"/>
     
-    <item android:id="@+id/measurement"
-        android:title="Temperatures"
+    <item android:id="@+id/bloodpressure"
+        android:title="Blood Pressure"
         android:orderInCategory="1"
         android:showAsAction="always" />
     
-    <item android:id="@+id/urinetest"
-        android:title="Usage"
+    <item android:id="@+id/pulse"
+        android:title="Pulse"
         android:orderInCategory="2"
         android:showAsAction="always" />
     
-    <item android:id="@+id/device"
-        android:title="Settings"
+    <item android:id="@+id/ecg"
+        android:title="ECG"
         android:orderInCategory="3"
         android:showAsAction="always" />
 </menu>
